--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -1,3 +1,5 @@
+include mime.types;
+
 upstream real_estate {
     server backend:8000;
 }
@@ -5,6 +7,13 @@ upstream real_estate {
 server {
 
     listen 80;
+
+    location / {
+        proxy_pass http://real_estate;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
 
     # Django API docs endpoint served here.
     location /api/docs {
