--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: "3.5"
 
 volumes:
   postgres_data:
+  static_volume:
 
 networks:
   real_estate_docker_network:
@@ -20,10 +21,13 @@ services:
       dockerfile: build/Dockerfile.django_backend
     command: >
       sh -c "python manage.py wait_for_db &&
-      python manage.py migrate &&
-      python manage.py runserver 0.0.0.0:8000"
-    ports:
-      - "8000:8000"
+      python manage.py migrate --noinput &&
+      python manage.py collectstatic --no-input &&
+      gunicorn real_estate.wsgi:application --bind 0.0.0.0:8000"
+    expose:
+      - 8000
+    volumes:
+      - static_volume:/code/staticfiles
     depends_on:
       - database
     networks:
@@ -39,6 +43,19 @@ services:
     networks:
       - real_estate_docker_network
 
+  nginx:
+    build:
+      context: .
+      dockerfile: build/Dockerfile.nginx_proxy
+    ports:
+      - 1337:80
+    volumes:
+      - static_volume:/code/staticfiles
+    depends_on:
+      - backend
+    networks:
+      - real_estate_docker_network
+    
   database:
     container_name: postgres_db_real_estate
     build:
