feat(build): Vue served by Nginx

--- a/app/nginx/nginx.conf
+++ b/app/nginx/nginx.conf
@@ -1,33 +1,9 @@
-include mime.types;
-
-upstream real_estate {
-    server backend:8000;
-}
-
 server {
-
-    listen 80;
+    listen 8080;
 
     location / {
-        proxy_pass http://real_estate;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+        root /code;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
-
-    # Django API docs endpoint served here.
-    location /api/docs {
-        proxy_pass http://real_estate;
-        autoindex off;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-
-    # Django static assest served here.
-    location /static/ {
-        autoindex on;
-        alias /code/staticfiles/;
-    }
-
 }
